# CircuitPython_Ground_Station

./: .gitignore  .pre-commit-config.yaml  README.md  ground_station.py  pyproject.toml
.github/workflows/: ci.yaml
proveskit_ground_station/: proveskit_ground_station.py
